<?xml version="1.0" encoding="UTF-8"?>
<!--
  Local Git Commit Gate — P1 (gate skeleton).

  Build constraints enforced here (see 架构落地执行文档 §4.3, ADR-1):
    * Java 17.
    * NO JGit anywhere. The authoritative git path is the real git binary via ProcessRunner.
    * gate-domain / gate-ports / gate-application are plain jars: no spring-boot-starter,
      no java.sql. Spring lives only in gate-adapters + gate-cli.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>gate</groupId>
  <artifactId>gate-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>gate-parent</name>

  <modules>
    <module>gate-domain</module>
    <module>gate-ports</module>
    <module>gate-application</module>
    <module>gate-adapters</module>
    <module>gate-bootstrap</module>
    <module>gate-cli</module>
    <module>gate-web</module>
  </modules>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <spring.boot.version>3.2.5</spring.boot.version>
    <picocli.version>4.7.6</picocli.version>
    <archunit.version>1.2.1</archunit.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli-spring-boot-starter</artifactId>
        <version>${picocli.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tngtech.archunit</groupId>
        <artifactId>archunit-junit5</artifactId>
        <version>${archunit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>gate</groupId>
        <artifactId>gate-domain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>gate</groupId>
        <artifactId>gate-ports</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>gate</groupId>
        <artifactId>gate-application</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>gate</groupId>
        <artifactId>gate-adapters</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>gate</groupId>
        <artifactId>gate-bootstrap</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <release>17</release>
            <compilerArgs>
              <arg>-Xlint:all,-serial,-processing</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <!-- Tests shell out to real git; keep output decodable on Windows. -->
            <argLine>-Dfile.encoding=UTF-8</argLine>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring.boot.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
